# hfkyxg

./: README.md
agent-framework/: .env.example  .gitignore  README.md  pyproject.toml
agent-framework/.github/workflows/: agent-framework-ci.yml
agent-framework/examples/: build_fastapi_project.sh  run_tasks.sh
agent-framework/personas/: data-analyst.yaml  default.yaml  demo.yaml  devops.yaml  researcher.yaml
agent-framework/personas/providers/: azure-gpt4.yaml  cohere.yaml  gemini-flash.yaml  gemini-pro.yaml  gpt4o-mini.yaml  gpt4o.yaml  groq-llama.yaml  groq-mixtral.yaml  mistral-large.yaml  mistral-small.yaml  ollama-hermes.yaml  together-llama.yaml
agent-framework/personas/roles/: backend.yaml  frontend.yaml  infra.yaml  integrator.yaml  planner.yaml  reviewer.yaml
agent-framework/skills/: backup_videos.yaml  code_review.yaml  git_summary.yaml  organize_dir.yaml  research.yaml  run_tests.yaml  scaffold_project.yaml  summarize_dir.yaml
agent-framework/tests/: conftest.py
agent-framework/tests/core/: test_agent_extended.py  test_agent_loop.py  test_autonomous_project.py  test_content_generator.py  test_mock_provider.py  test_orchestrator.py  test_permissions.py  test_persona.py  test_project.py  test_provider.py  test_run_once.py  test_runtime.py  test_safety.py  test_session.py  test_subagent_delegation.py  test_tool_registry.py  test_workflow.py
agent-framework/tests/integration/: test_agent_e2e.py
agent-framework/workflows/: code_monitor.yaml  daily_summary.yaml  file_organizer.yaml  heartbeat.yaml  notify_on_error.yaml  web_research.yaml
(+61 files in other folders)
