[project]
name = "apathy"
version = "0.1.0"
description = "Autonomous agent framework with parallel multi-agent execution and multi-provider LLM support"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.55",
    "mcp>=1.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
discord = ["discord.py>=2.4"]
slack = ["slack-bolt>=1.20"]
telegram = ["python-telegram-bot>=21.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
apathy = "agent_framework.interfaces.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_framework"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
